# sgks_football

./: .gitignore  LICENSE  README.md
backend/: .env.sample  download_db.py  migrate_db.py  pyproject.toml  requirements.txt  start.sh
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: BackupManager.jsx  LoginModal.jsx  MatchForm.jsx  MatchList.jsx  MatchModal.jsx  NavBar.jsx  PlayerForm.jsx  PlayerList.jsx  PlayerModal.jsx  PlayerVisibilityManager.jsx  PresentationMode.jsx  SeasonSelector.jsx  StatsPage.jsx  UnknownPlayerManager.jsx
frontend/src/components/stats/: AgeGoalsScatter.jsx  GoalRaceChart.jsx  LeaderboardChart.jsx  Podium.jsx
frontend/src/pages/: MatchesPage.jsx  PlayersPage.jsx
frontend/src/utils/: chartColors.js  season.js  stats.js  team.js
