[project]
name = "sgks-football"
version = "0.1.0"
description = "Backend for SGKS Football statistics tracking app"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]",
    "pydantic",
    "python-dotenv",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
